[gd_scene load_steps=7 format=2]

[ext_resource path="res://parser/parsers.gd" type="Script" id=1]
[ext_resource path="res://parser/bsh_parser.gd" type="Script" id=2]
[ext_resource path="res://parser/color_palette.gd" type="Script" id=3]
[ext_resource path="res://parser/building_generator.gd" type="Script" id=4]
[ext_resource path="res://parser/cod_parser.gd" type="Script" id=5]
[ext_resource path="res://parser/tileset_writer.gd" type="Script" id=6]

[node name="parsers" type="Node" index="0"]

script = ExtResource( 1 )

[node name="bsh_parser" type="Node" parent="." index="0"]

editor/display_folded = true
script = ExtResource( 2 )

[node name="color_palette" type="Node" parent="bsh_parser" index="0"]

script = ExtResource( 3 )

[node name="building_generator" type="Node" parent="." index="1"]

script = ExtResource( 4 )

[node name="cod_parser" type="Node" parent="." index="2"]

script = ExtResource( 5 )

[node name="tileset_writer" type="Node" parent="." index="3"]

script = ExtResource( 6 )


